Final Commit: Fix z-index on all major elements for cross-browser compatibility
z-index:
Body: 0
Body::after: -1
Main-Div 10

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   width:100%;
+  z-index: 0;
   display:table-cell;
 }
 html, body {
@@ -31,6 +32,7 @@ body::after {
   background-attachment:fixed;
   background-position:bottom;
   opacity:0.1;
+  z-index: -1;
   top: 0;
   left: 0;
   bottom: 0;
@@ -59,7 +61,9 @@ li, p {
   font-family: 'Noto Serif', serif;
   /* color: #2e2e30; */
 }
-
+div.cover-container {
+  z-index: 10;
+}
 img.contact-home {
   border-radius: 50%;
   width: 2.5em;
